# agentshield

./: .env.license-gateway.example  .env.public-release.example  .env.public-sale.example  .env.release.example  .gitignore  README.md  agentshield-threat-model.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
docs/: analysis-plan.md  fix-plan-native-features.md  overhaul-plan.md
e2e/: smoke.spec.ts
scripts/: admin-dashboard.html  curate-pilot-release-assets.sh  deploy-storefront-downloads.sh  gateway-dev.sh  generate-brand-icon.swift  github-release-build.sh  html-loader.mjs  issue-public-license.sh  license-gateway.mjs  license-ops-console.mjs  public-release-build.sh  public-sale-gate.sh  release-gate.sh  release-github-ready.sh  render-tauri-release-config.mjs  runtime-guard-report.mjs  runtime-guard-soak.sh  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.example.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/rules/: default-skill-risk-rules.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_orchestrator.rs  audit_export.rs  builtin_catalog.rs  discovery.rs  install.rs  license.rs  mod.rs  notification.rs  platform.rs  protection.rs  risk_profile.rs  runtime_guard.rs  runtime_settings.rs  scan.rs  semantic_guard.rs  store.rs  vault.rs
src-tauri/src/rule_updater/: mod.rs
src-tauri/src/types/: license.rs  mod.rs  notification.rs  protection.rs  runtime_guard.rs  scan.rs  store.rs  vault.rs
(+229 files in other folders)
